--- a/mbed_app.json
+++ b/mbed_app.json
@@ -1,7 +1,24 @@
 {
-    "target_overrides": {
-        "K64F": {
-            "platform.stdio-baud-rate": 9600
+    "config": {
+	"main-stack-size": {
+            "value": 65536
+	},
+	"usb_speed": {
+            "help": "USE_USB_FS ",
+            "value": "USE_USB_FS"
         }
-    }
+    },
+	"target_overrides": {
+        "*": {
+            "target.device_has_add": [
+                "USBDEVICE"
+            ],
+            "platform.stdio-baud-rate": 115200,
+            "target.printf_lib": "std"
+        }
+    },
+    "requires": ["bare-metal","drivers-usb","events"]
+    ,"macros": [
+        "NDEBUG"
+    ]
 }
